--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -33,7 +33,7 @@
 % Title Details
 %------------------------------------------------------------------------------
 \title{
-    \bf{Group 10 - Deliverable \#1}\\
+    \textbf{Group 10 - Deliverable \#1}\\
     \large SFWRENG 3A04: Software Design III - Large System Design
 }
 \author{
@@ -298,7 +298,7 @@ event that may have occurred. These events include:
 The following Business Events are all in the User Viewpoint.
 
 
-\begin{enumerate}[start=1, label={\bf{BE\arabic*.}}]
+\begin{enumerate}[start=1, label={\textbf{BE\arabic*.}}]
 	\item The user wants to create his SE
     \begin{enumerate}[1.]
         \item The system shall allow the user to choose the name of their SE
@@ -617,22 +617,54 @@ N/A
 \appendix
 \section{Division of Labour}
 \label{sec:division_of_labour}
-% Begin Section
-Include a Division of Labour sheet which indicates the contributions of each team member. This sheet must be signed by all team members.
-% End Section
+\begin{table}[H]
+    \centering
+    \caption{Division of Labour}
+    \begin{tabular}{|p{2.5cm}|p{2.5cm}|p{10.5cm}|}
+        \hline
+        \textbf{Section} & \textbf{Contributor(s)} & \textbf{Description}\\
+        \hline
+        \textbf{Brainstorming} & All Members & Developed an idea for the project 
+        and answered the minimum requirement questions\\
+        \hline
+        \textbf{Introduction} & Christopher Vishnu & Completed and revised 
+        the introduction\\
+        \hline
+        \textbf{Overall Description} & Shengchen Zhou, Andrew Hum & Shengchen 
+        completed all the sections in the Overall Description. Andrew revised 
+        the sections and checked for grammar and consistency.\\
+        \hline
+        \textbf{Functional Requirements} & Andrew Hum, Hongzhao Tan & Both 
+        contributors developed and revised all the Business Events and 
+        Functional Requirements\\
+        \hline
+        \textbf{Non-Functional Requirements} & Arkin Modi & Completed and 
+        revised all the non-functional requirements\\
+        \hline
+    \end{tabular}
+\end{table}
 
-\newpage
-\section*{IMPORTANT NOTES}
-\begin{itemize}
-	\item Be sure to include all sections of the template in your document regardless whether you have something to write for each or not
-	\begin{itemize}
-		\item If you do not have anything to write in a section, indicate this by the \emph{N/A}, \emph{void}, \emph{none}, etc.
-	\end{itemize}
-	\item Uniquely number each of your requirements for easy identification and cross-referencing
-	\item Highlight terms that are defined in Section~1.3 (\textbf{Definitions, Acronyms, and Abbreviations}) with \textbf{bold}, \emph{italic} or \underline{underline}
-	\item For Deliverable 1, please highlight, in some fashion, all (you may have more than one) creative and innovative features. Your creative and innovative features will generally be described in Section~2.2 (\textbf{Product Functions}), but it will depend on the type of creative or innovative features you are including.
-\end{itemize}
+\vspace{2cm}
 
+\begin{table}[H]
+    \begin{tabular}{p{5cm}}
+    \\
+    \hline
+    Andrew Hum
+    \\\\\\\\
+    \hline
+    Arkin Modi
+    \\\\\\\\
+    \hline
+    Hongzhao Tan
+    \\\\\\\\
+    \hline
+    Christopher Vishnu
+    \\\\\\\\
+    \hline
+    Shengchen Zhou
+    \end{tabular}
+\end{table}
 
 \end{document}
 %------------------------------------------------------------------------------
