Force Division of Labour onto new page

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -614,6 +614,7 @@ N/A
 \label{ssub:standards_requirements}
 N/A
 
+\newpage
 \appendix
 \section{Division of Labour}
 \label{sec:division_of_labour}
