Added missing word

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -513,7 +513,7 @@ N/A
 \subsubsection{Capacity Requirements}
 \label{ssub:capacity_requirements}
 \begin{enumerate}[start=5, label={PR\arabic*.}]
-	\item The system will allow two users to via an online session.
+	\item The system will allow two users to interact via an online session.
 	\item The system will store the player data.
 \end{enumerate}
 
