Updated FR and Product Perspective

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -114,9 +114,10 @@ Unity platform using C\#. The product design itself is not a continuation of any
 predecessor products, but in the past there were many implementations with a 
 similar concept; raising a digital being. The trend of virtual pet games started 
 from mid 1990s to early 2000s, popularized by the Tamagotchis. Our product will 
-differentiate itself by giving users an experience of raising a software engineer 
-from the very beginning.
-
+differentiate itself by giving users an experience of raising a software 
+engineer from the very beginning. Our product is a self-contained system that 
+will not be interacting with other systems.
+\\\\
 The system’s main features:
 \begin{enumerate}[1)]
     \item A server with functionalities:
@@ -310,7 +311,7 @@ The following Business Events are all in the User Viewpoint.
         \item The system shall provide the choice to restart creation
     \end{enumerate}
     
-	\item The user wants to purchase items
+	\item The user wants to purchase items for the SE
 	\begin{enumerate}[1.]
 		\item The system shall allow the user to browse the in-game store/shop
         \item The user shall be able to purchase furniture, pets, pet 
@@ -372,7 +373,7 @@ The following Business Events are all in the User Viewpoint.
         \item The system shall track the user’s lifespan and record a score
     \end{enumerate}
     
-    \item Accessing inventory and using items
+    \item The user wants to access their inventory and use items
 	\begin{enumerate}[1.]
         \item The system shall allow the user to open the SE’s inventory display 
         its items
@@ -382,7 +383,7 @@ The following Business Events are all in the User Viewpoint.
         inventory        
     \end{enumerate}
 
-    \item Interact with objects in the room
+    \item The user want to interact with objects in the room
 	\begin{enumerate}[1.]
         \item The system shall allow interaction between the SE and its environment
         \item The system shall allow the SE to interact with their pet (playing, 
