Added Analysis Class Diagram

--- a/Docs/D2/D2.tex
+++ b/Docs/D2/D2.tex
@@ -13,6 +13,7 @@
 \usepackage{graphicx}
 \usepackage{extarrows}
 \usepackage{setspace}
+\usepackage{float}
 %------------------------------------------------------------------------------
 
 % Header and Footer
@@ -89,9 +90,11 @@ SE - Software Engineer
 
 \section{Analysis Class Diagram}
 \label{sec:analysis_class_diagram}
-% Begin Section
-This section should provide an analysis class diagram for your application.
-% End Section
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{"Analysis Class Diagram".png}
+    \caption{Analysis Class Diagram for Hacker Sim}
+\end{figure}
 
 
 \section{Architectural Design}
