Added Entity Class CRC Cards

--- a/Docs/D2/D2.tex
+++ b/Docs/D2/D2.tex
@@ -186,28 +186,128 @@ their purpose and relationship to other subsystems.
 	
 \section{Class Responsibility Collaboration (CRC) Cards}
 \label{sec:class_responsibility_collaboration_crc_cards}
-% Begin Section
-This section should contain all of your CRC cards.
+\subsection{Entity Class CRC Cards}
+\label{sec:entity_class_CRC_cards}
 
-\begin{enumerate}[a)]
-	\item Provide a CRC Card for each identified class
-	\item Please use the format outlined in tutorial, i.e., 
-	\begin{table}[ht]
-		\centering
-		\begin{tabular}{|p{5cm}|p{5cm}|}
-		\hline 
-		 \multicolumn{2}{|l|}{\textbf{Class Name:}} \\
-		\hline
-		\textbf{Responsibility:} & \textbf{Collaborators:} \\
-		\hline
-		\vspace{1in} & \\
-		\hline
-		\end{tabular}
-	\end{table}
-	
-\end{enumerate}
-% End Section
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|p{5cm}|p{5cm}|}
+        \hline
+        \multicolumn{2}{|l|}{\textbf{Class Name:} General Room}\\
+        \hline
+        \textbf{Responsibility:} & \textbf{Collaborators:}\\
+        \hline
+        Store SE current state (gaming, working, exercising, sleeping, etc) & ~\\
+        ~ & ~\\
+        Store room items (exercise equipment, furniture) & ~\\
+        ~ & ~\\
+        Store room size & ~\\
+        \hline
+    \end{tabular}
+\end{table}
 
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|p{5cm}|p{5cm}|}
+        \hline
+        \multicolumn{2}{|l|}{\textbf{Class Name:} User Attributes}\\
+        \hline
+        \textbf{Responsibility:} & \textbf{Collaborators:}\\
+        \hline
+        Store currency & ~\\
+        ~ & ~\\
+        Store coding experience level & ~\\
+        ~ & ~\\
+        Store friends list & ~\\
+        \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|p{5cm}|p{5cm}|}
+        \hline
+        \multicolumn{2}{|l|}{\textbf{Class Name:} SE Attributes}\\
+        \hline
+        \textbf{Responsibility:} & \textbf{Collaborators:}\\
+        \hline
+        Store SE’s name and sex & ~\\
+        ~ & ~\\
+        Store SE’s current state (happiness, tiredness, hunger, etc.) & ~\\
+        \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|p{5cm}|p{5cm}|}
+        \hline
+        \multicolumn{2}{|l|}{\textbf{Class Name:} SE Inventory}\\
+        \hline
+        \textbf{Responsibility:} & \textbf{Collaborators:}\\
+        \hline
+        Store SE’s items and quantities & ~\\
+        \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|p{5cm}|p{5cm}|}
+        \hline
+        \multicolumn{2}{|l|}{\textbf{Class Name:} Shop}\\
+        \hline
+        \textbf{Responsibility:} & \textbf{Collaborators:}\\
+        \hline
+        Store items and prices & ~\\
+        ~ & ~\\
+        Store skills and prices & ~\\
+        \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|p{5cm}|p{5cm}|}
+        \hline
+        \multicolumn{2}{|l|}{\textbf{Class Name:} Projects}\\
+        \hline
+        \textbf{Responsibility:} & \textbf{Collaborators:}\\
+        \hline
+        Store all projects & ~\\
+        ~ & ~\\
+        Store project information (name, deadline, reward, skills required, completion status) & ~\\
+        \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|p{5cm}|p{5cm}|}
+        \hline
+        \multicolumn{2}{|l|}{\textbf{Class Name:} Time-Step}\\
+        \hline
+        \textbf{Responsibility:} & \textbf{Collaborators:}\\
+        \hline
+        Store time elapsed & ~\\
+        \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|p{5cm}|p{5cm}|}
+        \hline
+        \multicolumn{2}{|l|}{\textbf{Class Name:} Chat History}\\
+        \hline
+        \textbf{Responsibility:} & \textbf{Collaborators:}\\
+        \hline
+        Store all chat history and username of the user communicating with  & ~\\
+        \hline
+    \end{tabular}
+\end{table}
+
+\newpage
 \appendix
 \section{Division of Labour}
 \label{sec:division_of_labour}
